# kalshi-bot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  output.txt  requirements.txt
.github/scripts/: conan-profile.sh
.github/workflows/: cpptest.yaml
src/: client.py  clients.py  main.py  math_utils.py
tests/: test_math_utils.py
